2008-10-10  Don Porter  <dgp@users.sourceforge.net>

	*** 8.6a3 TAGGED FOR RELEASE ***

	* changes:	Updates for 8.6a3 release.

2008-10-09  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkListbox.c:	Make literal return values consistent with
	those generated by Tcl_PrintDouble().

	* tests/entry.test:	Restore test naming consistency with Tk 8.5.
	* tests/listbox.test:	Remove some more dependency on precision in
	* tests/spinbox.test:	test results.

2008-10-08  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:          fix for bug [2073255]
	* unix/configure:       regenerated

2008-10-08  Don Porter  <dgp@users.sourceforge.net>

	* tests/textDisp.test (textDisp-16.34):	Update test that tested
	string equality of double values based on an assumption of
	tcl_precision==12.  Test now does its own formatting.

	* tests/scrollbar.test:	Revised testing of the cget subcommand so
	that it tests consistency with the configure subcommand and not
	agreement with a hardcoded value that will change as tastes in
	GUIs evolve.

	* tests/canvText.test (canvText-17.1):	Update expected result to
	match revised PostScript output due to more predictable formatting
	of floating point values.

	* unix/tkUnixWm.c:	Restored consistency of error messages from
	* macosx/tkMacOSXWm.c:	[wm iconphoto] with the test suite and across
	* tests/unixWm.test:	all platforms.  [Bug 2021443]

2008-10-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/canvImg.test:  Removed dependency on precision in results
	* tests/canvRect.test:
	* tests/canvText.test: 
	* tests/entry.test: 
	* tests/listbox.test: 
	* tests/scrollbar.test: 
	* tests/spinbox.test:
	* tests/winWm.test: Fixed incorrect error strings
	* tests/wm.test: 

2008-10-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/winDialog.test: Fixed tests for Vista+
	* win/tkWinWm.c: corrected some errors from the previous commit

2008-10-05  Donal K. Fellows  <dkf@users.sf.net>
