@@ -1,3 +1,7 @@
+2008-10-11  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* generic/tkCanvas.c (CanvasWidgetCmd): Corrected result generation.
+
 2008-10-10  Don Porter  <dgp@users.sourceforge.net>
 
 	*** 8.6a3 TAGGED FOR RELEASE ***
